--- a/app.yaml
+++ b/app.yaml
@@ -15,7 +15,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: httpd
-        image: httpd
+      - name: nginx
+        image: nginx
         ports:
         - containerPort: 80
